Make entrypoint executable

--- a/wordpress/5-apache/Dockerfile
+++ b/wordpress/5-apache/Dockerfile
@@ -21,7 +21,8 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 
 # hadolint ignore=DL3045
 COPY --chown=www-data:www-data etc/wp-config.php /.artifakt/
-COPY --chmod=+x etc/app-entrypoint.sh /.artifakt/entrypoint.sh
+COPY etc/app-entrypoint.sh /.artifakt/entrypoint.sh
+RUN chmod +x /.artifakt/entrypoint.sh
 COPY docker-entrypoint.sh /usr/local/bin/
 
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
