Fix/Clean vhost

--- a/magento/2.4-apache/etc/000-default.conf
+++ b/magento/2.4-apache/etc/000-default.conf
@@ -1,8 +1,3 @@
-<VirtualHost *:443>
-  # Allow encoded slashes
-  AllowEncodedSlashes NoDecode
-</VirtualHost>
-
 <VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
@@ -15,14 +10,16 @@
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/pub
+	Alias "/setup" "/var/www/html/setup"
 
-	<Directory "/var/www/html/pub">
-	  	Options Indexes FollowSymLinks MultiViews
- 		 AllowOverride All
-  		Order allow,deny
-  		Allow from all
-        #Required all granted
-	</Directory>
+	# Allow encoded slashes
+    AllowEncodedSlashes NoDecode
+
+    <Directory "/var/www/html/pub">
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride All
+        Require all granted
+    </Directory>
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
