feature/wordpress_optimizations: Improve mount directories

--- a/wordpress/5-apache/Dockerfile
+++ b/wordpress/5-apache/Dockerfile
@@ -23,8 +23,7 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
     mv wp-cli.phar /usr/local/bin/wp
 
 # hadolint ignore=DL3045
-# Clean workdir and add default configuration files
-RUN rm -rf /var/www/html/wp-content/
+# Add default configuration files
 COPY --chown=www-data:www-data etc/wp-config.php /var/www/html/
 COPY etc/entrypoint.sh /.artifakt/
 
