Change to php version 7.3, composer version to 2.0.14 and create the /var/www/.composer folder for cache management

--- a/symfony/4.4-apache/Dockerfile
+++ b/symfony/4.4-apache/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.artifakt.io/php:7.4-apache
+FROM registry.artifakt.io/php:7.3-apache
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
@@ -9,9 +9,13 @@ HEALTHCHECK CMD curl --fail http://localhost/index.php || exit 1
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 #downgrade composer to v1.x
-ARG COMPOSER_VERSION=1.10.22
+# 2021-06-24: Aymeric Mathéossian / Upgrade to version 2.0.14 because of last 4.4 version and error message:
+## "Warning from https://repo.packagist.org: Support for Composer 1 is deprecated and some packages will not be available. You should upgrade to Composer 2. See https://blog.packagist.com/deprecating-composer-1-support/"
+ARG COMPOSER_VERSION=2.0.14
 RUN curl -sS https://getcomposer.org/installer | \
   php -- --version=${COMPOSER_VERSION} --install-dir=/usr/local/bin --filename=composer
+
+RUN mkdir /var/www/.composer && chown -R www-data:www-data /var/www/.composer
 
 USER www-data
 RUN composer create-project symfony/website-skeleton:"^4.4" /tmp/website-skeleton && \
