--- a/symfony/4.4-apache/Dockerfile
+++ b/symfony/4.4-apache/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.artifakt.io/php:7.3-apache
+FROM registry.artifakt.io/php:7.4-apache
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
@@ -8,13 +8,13 @@ HEALTHCHECK CMD curl --fail http://localhost/index.php || exit 1
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-#downgrade composer to v1.x
 # 2021-06-24: Aymeric Mathéossian / Upgrade to version 2.0.14 because of last 4.4 version and error message:
 ## "Warning from https://repo.packagist.org: Support for Composer 1 is deprecated and some packages will not be available. You should upgrade to Composer 2. See https://blog.packagist.com/deprecating-composer-1-support/"
 ARG COMPOSER_VERSION=2.0.14
 RUN curl -sS https://getcomposer.org/installer | \
   php -- --version=${COMPOSER_VERSION} --install-dir=/usr/local/bin --filename=composer
 
+RUN mkdir -p /var/log/artifakt && chown -R www-data:www-data /var/log/artifakt
 RUN mkdir /var/www/.composer && chown -R www-data:www-data /var/www/.composer
 
 USER www-data
@@ -30,5 +30,9 @@ USER root
 COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
+
+# Create the parameter.yml file if it doesn't exist
+COPY --chown=www-data:www-data etc/parameters.yml /var/www/html/config/parameters.yml
+
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
