fix java workdir

--- a/java/8/Dockerfile
+++ b/java/8/Dockerfile
@@ -4,6 +4,9 @@ LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
       stage="alpha"
 
+RUN mkdir -p /var/www/html && chown -R www-data:www-data /var/www/html
+WORKDIR /var/www/html
+
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
 
