Add minimal tests (#83)
* add minimal tests

* fix java workdir

* fix drupal tests

* fix test regex

* Update Dockerfile

--- a/drupal/9.2-apache/Dockerfile
+++ b/drupal/9.2-apache/Dockerfile
@@ -28,7 +28,7 @@ RUN set -eux; \
 	export COMPOSER_HOME="$(mktemp -d)"; \
 	composer create-project --no-interaction "drupal/recommended-project:$DRUPAL_VERSION" ./; \
 	composer require --no-cache --update-no-dev --prefer-dist --no-ansi --no-interaction drush/drush; \
-	chown -R www-data:www-data web/sites web/modules web/themes; \
+	chown -R www-data:www-data /opt/drupal web/sites web/modules web/themes; \
 	rmdir /var/www/html; \
 	ln -sf /opt/drupal/web /var/www/html; \
 	# delete composer cache
