--- a/symfony/4.4-apache/test.yaml
+++ b/symfony/4.4-apache/test.yaml
@@ -30,12 +30,16 @@ commandTests:
     setup: [["/usr/local/bin/docker-entrypoint.sh"]]
     command: "ls"
     args: [ "-la", "/var/www/html/public/uploads"]
-    expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data [0-9]{2} [A-Za-z]{3} [0-9]{1,2} [0-9]{2}:[0-9]{2} /var/www/html/public/uploads -> /data/public/uploads' ]
+    expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data .+ /var/www/html/public/uploads -> /data/public/uploads' ]
   - name: "check mounted folder log"
     setup: [["/usr/local/bin/docker-entrypoint.sh"]]
     command: "ls"
     args: [ "-la", "/var/www/html/var/log"]
-    expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data [0-9]{2} [A-Za-z]{3} [0-9]{1,2} [0-9]{2}:[0-9]{2}  /var/www/html/var/log -> /data/var/log' ]
+    expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data .+ /var/www/html/var/log -> /data/var/log' ]
+  - name: "symfony version"
+    command: "./bin/console"
+    args: [ "about"]
+    expectedOutput: ['.*Version\s+4\.4\..+']
   - name: "apache version"
     command: "apache2ctl"
     args: [ "-v"]
