add check on secret file

--- a/symfony/4.4-apache/test.yaml
+++ b/symfony/4.4-apache/test.yaml
@@ -26,6 +26,11 @@ fileExistenceTests:
   isExecutableBy: 'any'
 
 commandTests:
+  - name: "check secret key"
+    setup: [["/usr/local/bin/docker-entrypoint.sh"]]
+    command: "ls"
+    args: [ "-la", "/data/secret-key"]
+    expectedOutput: [ '-rw-r--r-- 1 root root .+ /data/secret-key' ]
   - name: "check mounted folder uploads"
     setup: [["/usr/local/bin/docker-entrypoint.sh"]]
     command: "ls"
