explicit prod setting in apache

--- a/symfony/4.4-apache/000-default.conf
+++ b/symfony/4.4-apache/000-default.conf
@@ -12,8 +12,8 @@
         FallbackResource /index.php
     </Directory>
 
-    SetEnv APP_ENV ${APP_ENV}
-    SetEnv APP_DEBUG ${APP_DEBUG}
+    SetEnv APP_ENV prod
+    SetEnv APP_DEBUG 0
 
     # uncomment the following lines if you install assets as symlinks
     # or run into problems when compiling LESS/Sass/CoffeeScript assets
