--- a/symfony/5.3-apache/etc/parameters.yml
+++ b/symfony/5.3-apache/etc/parameters.yml
@@ -8,4 +8,4 @@ parameters:
     mailer_host: 'localhost'
     mailer_user: 'null'
     mailer_password: 'null'
-    secret: '%env(WORDPRESS_SECRET)%'
+    secret: '%env(SYMFONY_SECRET)%'
