fix detected error on drupal build

--- a/drupal/9.2-apache/test.yaml
+++ b/drupal/9.2-apache/test.yaml
@@ -31,6 +31,11 @@ commandTests:
     command: "ls"
     args: [ "-la", "/data/salt.txt"]
     expectedOutput: [ '-rw-r--r-- 1 www-data www-data .+ /data/salt.txt' ]
+  - name: "check salt file content"
+    setup: [["/usr/local/bin/docker-entrypoint.sh"]]
+    command: "wc"
+    args: [ "-c", "<" , "/data/salt.txt"]
+    excludedOutput: [ '0' ]
   - name: "check mounted folder private"
     setup: [["/usr/local/bin/docker-entrypoint.sh"]]
     command: "ls"
