--- a/akeneo/4-apache/test.yaml
+++ b/akeneo/4-apache/test.yaml
@@ -37,7 +37,7 @@ commandTests:
     setup: [["/usr/local/bin/docker-entrypoint.sh"]]
     command: "ls"
     args: [ "-la", "/var/www/html/pim-community-standard/var/logs"]
-    expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data .+ /var/www/html/pim-community-standard/var/logs -> /data/var/logs' ]
+    expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data .+ /var/www/html/pim-community-standard/var/logs -> /var/log/artifakt' ]
   - name: "nodejs version"
     command: "node"
     args: [ "-v"]
