--- a/php/7.4-fpm/Dockerfile
+++ b/php/7.4-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4-apache
+FROM php:7.4-fpm
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
@@ -118,4 +118,4 @@ COPY zzz-artifakt.ini $PHP_INI_DIR/conf.d/zzz-artifakt.ini
 COPY docker-entrypoint.sh /usr/local/bin/
 
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
-CMD ["apache2-foreground"]
+CMD ["php-fpm"]
