--- a/akeneo/4-apache/test.yaml
+++ b/akeneo/4-apache/test.yaml
@@ -33,6 +33,11 @@ commandTests:
     command: "ls"
     args: [ "-la", "/var/www/html/pim-community-standard/public/uploads"]
     expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data .+ /var/www/html/pim-community-standard/public/uploads -> /data/public/uploads' ]
+  - name: "check mounted folder var"
+    setup: [["/usr/local/bin/docker-entrypoint.sh"]]
+    command: "ls"
+    args: [ "-la", "/var/www/html/pim-community-standard/var"]
+    expectedOutput: [ 'lrwxrwxrwx 1 www-data www-data .+ /var/www/html/pim-community-standard/var -> /data/var' ]
   - name: "check mounted folder var log"
     setup: [["/usr/local/bin/docker-entrypoint.sh"]]
     command: "ls"
