--- a/ruby/2.7/test.yaml
+++ b/ruby/2.7/test.yaml
@@ -6,7 +6,7 @@ metadataTest:
   workdir: "/var/www/html"
 
 commandTests:
-  - name: "php -v"
-    command: "php"
-    args: [ "-v"]
-    expectedOutput: ['.*8\.0\.*']
+  - name: "ruby -v"
+    command: "ruby"
+    args: [ "--version"]
+    expectedOutput: ['.*2\.7\.*']
