--- a/vuejs/3/Dockerfile
+++ b/vuejs/3/Dockerfile
@@ -1,12 +1,9 @@
-FROM changeme
+FROM registry.artifakt.io/node:14
 
 LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
       stage="alpha"
 
-# hadolint ignore=DL3045
-COPY docker-entrypoint.sh /usr/local/bin/
+RUN npm install -g vue@next @vue/cli
 
 WORKDIR /var/www/html
-
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
