minimal working golang image

--- a/golang/1.16/test.yaml
+++ b/golang/1.16/test.yaml
@@ -3,10 +3,15 @@ metadataTest:
   exposedPorts: []
   volumes: []
   entrypoint: ["/usr/local/bin/docker-entrypoint.sh"]
-  workdir: "/var/www/html"
+  workdir: "/go/src/app"
 
 commandTests:
-  - name: "php -v"
-    command: "php"
-    args: [ "-v"]
-    expectedOutput: ['.*8\.0\.*']
+  - name: "go version"
+    command: "go"
+    args: [ "version"]
+    expectedOutput: ['.*1\.16\.*']
+  - name: "check code folder should link to go source app"
+    setup: [["/usr/local/bin/docker-entrypoint.sh"]]
+    command: "ls"
+    args: [ "-la", "/go/src/"]
+    expectedOutput: [ 'drwxr-xr-x 2 www-data www-data .+ app' ]
