--- a/shopware/6.4-apache/000-default.conf
+++ b/shopware/6.4-apache/000-default.conf
@@ -1,26 +1,15 @@
 <VirtualHost *:80>
-    #ServerName domain.tld
-    #ServerAlias www.domain.tld
+   DocumentRoot /var/www/html/public
 
-    DocumentRoot /var/www/html/public
-    <Directory /var/www/html/public>
-        Options Indexes FollowSymLinks MultiViews 
-        AllowOverride All 
-        Order allow,deny 
-        allow from all 
+   <Directory /var/www/html>
+      Options Indexes FollowSymLinks MultiViews
+      AllowOverride All
+      Order allow,deny
+      allow from all
+      Require all granted
+   </Directory>
 
-        FallbackResource /index.php
-    </Directory>
-
-    SetEnv APP_ENV ${APP_ENV}
-    SetEnv APP_DEBUG ${APP_DEBUG}
-
-    # uncomment the following lines if you install assets as symlinks
-    # or run into problems when compiling LESS/Sass/CoffeeScript assets
-    # <Directory /var/www/project>
-    #     Options FollowSymlinks
-    # </Directory>
-
-    #ErrorLog /var/log/apache2/project_error.log
-    #CustomLog /var/log/apache2/project_access.log combined
+   ErrorLog /var/log/artifakt/shopware-platform.error.log
+   CustomLog /var/log/artifakt/shopware-platform.access.log combined
+   LogLevel debug
 </VirtualHost>
