--- a/akeneo/5-apache/akeneo.conf
+++ b/akeneo/5-apache/akeneo.conf
@@ -5,6 +5,7 @@
 
     SetEnv APP_ENV ${APP_ENV}
     SetEnv APP_DEBUG ${APP_DEBUG}
+    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 
     <Directory /var/www/html/pim-community-standard/public>
         AllowOverride None
