--- a/php/8-apache/Dockerfile
+++ b/php/8-apache/Dockerfile
@@ -20,7 +20,7 @@ ARG LIBSODIUM_VERSION=2.0.23
 
 # Install dependencies
 # hadolint ignore=DL3008
-RUN apt-get update \
+RUN apt-get --allow-releaseinfo-change update \
   && apt-get install -y --no-install-recommends \
   apt-utils \
   libbz2-dev \
