Fix PHP config overrides for Magento 2

--- a/magento/2.4-apache/Dockerfile
+++ b/magento/2.4-apache/Dockerfile
@@ -173,8 +173,8 @@ RUN curl -sS https://getcomposer.org/installer | \
 # hadolint ignore=DL3022
 COPY --from=mysql:8 /usr/bin/my* /usr/bin/
 
-COPY etc/magento.ini /usr/local/etc/php/conf.d/magento.ini
-COPY etc/mail.ini /usr/local/etc/php/conf.d/zz-mail.ini
+COPY etc/magento.ini /usr/local/etc/php/conf.d/zzzz-magento.ini
+COPY etc/mail.ini /usr/local/etc/php/conf.d/zzzz-mail.ini
 COPY etc/crontab /etc/cron.d/magento2-cron
 COPY etc/000-default.conf /etc/apache2/sites-available/000-default.conf
 RUN a2enmod rewrite && a2ensite 000-default
