--- a/magento/2.4-apache/etc/magento.ini
+++ b/magento/2.4-apache/etc/magento.ini
@@ -1,15 +1,26 @@
 memory_limit = _PHP_MEMORY_LIMIT_ ; Variable: PHP_MEMORY_LIMIT
-opcache.enable = 1
-opcache.memory_consumption = 512
-opcache.interned_strings_buffer = 16
-opcache.max_accelerated_files = 100000
-opcache.validate_timestamps = 0
-opcache.consistency_checks = 0
-opcache.enable_file_override = 1
-opcache.save_comments = 1
-opcache.fast_shutdown = 0
-date.timezone = Europe/Paris
-realpath_cache_ttl = 7200
-realpath_cache_size = 10M
+max_execution_time = 600
+zlib.output_compression = On
+cgi.fix_pathinfo = 0
+date.timezone = "Europe/Paris"
+
+opcache.enable=1
+opcache.enable_cli=0
+opcache.memory_consumption=512
+opcache.interned_strings_buffer=16
+opcache.max_accelerated_files=100000
+opcache.validate_timestamps=0
+opcache.consistency_checks=0
+opcache.enable_file_override=1
+opcache.save_comments=1
+opcache.fast_shutdown=0
+opcache.blacklist_filename=/usr/local/etc/php/opcache.exclusion
+
 upload_max_filesize = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
 post_max_size = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
+max_input_vars = 10000
+
+expose_php = Off
+
+realpath_cache_ttl = 7200
+realpath_cache_size = 10M
