--- a/magento/2.4/Dockerfile
+++ b/magento/2.4/Dockerfile
@@ -162,6 +162,7 @@ COPY --from=mysql:8 /usr/bin/my* /usr/bin/
 COPY etc/php-fpm.ini /usr/local/etc/php/conf.d/zz-magento.ini
 #COPY etc/php-xdebug.ini /usr/local/etc/php/conf.d/zz-xdebug-settings.ini
 COPY etc/mail.ini /usr/local/etc/php/conf.d/zz-mail.ini
+COPY etc/opcache.exclusion /usr/local/etc/php/opcache.exclusion
 COPY etc/php-fpm.conf /usr/local/etc/
 
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
