Update Docker HEALTHCHECK instruction to use native Magento 2 health check script

--- a/magento/2.4-apache/Dockerfile
+++ b/magento/2.4-apache/Dockerfile
@@ -183,7 +183,7 @@ RUN a2enmod rewrite && a2ensite 000-default
 RUN [ -n "${PHP_MEMORY_LIMIT}" ] && sed -i "s/_PHP_MEMORY_LIMIT_/${PHP_MEMORY_LIMIT}/" /usr/local/etc/php/conf.d/magento.ini
 RUN [ -n "${UPLOAD_MAX_FILESIZE}" ] && sed -i "s/_UPLOAD_MAX_FILESIZE_/${UPLOAD_MAX_FILESIZE}/" /usr/local/etc/php/conf.d/magento.ini
 
-HEALTHCHECK CMD curl --fail http://localhost/index.php || exit 1
+HEALTHCHECK CMD curl --fail http://localhost/health_check.php || exit 1
 
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
