--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -31,13 +31,11 @@ jobs:
     outputs:
         matrix: ${{ steps.output_data.outputs.matrix }}
 
-
   build_and_push:
     needs: provide_images_json
-    
     runs-on: ubuntu-latest
     strategy:
-        fail-fast: true
+        #fail-fast: true
         matrix:
             dockerfile: ${{fromJson(needs.provide_images_json.outputs.matrix)}}
     steps:
@@ -45,15 +43,36 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Build Docker Images
+
+      - name: Init env vars
         run: |
-          curl -LO https://storage.googleapis.com/container-structure-test/latest/container-structure-test-linux-amd64 && chmod +x container-structure-test-linux-amd64 && sudo mv container-structure-test-linux-amd64 /usr/local/bin/container-structure-test
           fullDockerfilePath=${{ matrix.dockerfile }}
           folder=${fullDockerfilePath%"/Dockerfile"}
           TMP_IMAGE_ARRAY=($(echo $folder | tr "/" "\n"))
-          IMAGE_NAME=${TMP_IMAGE_ARRAY[1]}
-          TAG=${TMP_IMAGE_ARRAY[2]}
+
+          IMAGE_NAME=${TMP_IMAGE_ARRAY[0]}
+          TAG=${TMP_IMAGE_ARRAY[1]}
+
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
+          echo "DOCKERFILE_FOLDER=$folder" >> $GITHUB_ENV
+
+      - name: Build Docker Images
+        run: |
+          curl -LO https://storage.googleapis.com/container-structure-test/latest/container-structure-test-linux-amd64 && chmod +x container-structure-test-linux-amd64 && sudo mv container-structure-test-linux-amd64 /usr/local/bin/container-structure-test
+
+          folder=${{ env.DOCKERFILE_FOLDER }}
+          IMAGE_NAME=${{ env.IMAGE_NAME }}
+          TAG=${{ env.IMAGE_TAG }}
+
+          tmpName="image-$RANDOM"
+
           export REGISTRY_TARGET=${{ secrets.AKT_ENG_REGISTRY_DOMAIN }} && ./build.sh --lint=true --test=true --image=$IMAGE_NAME --tag=$TAG
+          IMAGE_ID=registry.artifakt.io/$IMAGE_NAME
+
+          docker tag $tmpName $IMAGE_ID:$TAG
+          IMAGE_SIZE=`docker images $IMAGE_ID:$TAG --format "{{.Size}}"`
+          echo "IMAGE_SIZE=$IMAGE_SIZE" >> $GITHUB_ENV
 
       - name: Login to target registry
         if: github.ref == 'refs/heads/main'
@@ -63,6 +82,51 @@ jobs:
           username: _json_key
           password: ${{ secrets.AKT_ENG_REGISTRY_PUBLIC_JSON }}
 
-      - name: Push images to GoogleContainerRegistry
+      - name: Push images to GCR only on main branch
         if: github.ref == 'refs/heads/main'
         run: docker images --format "{{.Repository}}:{{.Tag}}" | grep ${{ secrets.AKT_ENG_REGISTRY_DOMAIN }} | xargs -n 1 docker push
+
+      - name: Create custom badge for image size
+        id: badge_size
+        if: github.ref == 'refs/heads/main'
+        uses: djalal/job-status-badge@main
+        with:
+          cloudinary_url: ${{ secrets.CLOUDINARY_URL }}
+          left_text: "image%20size"
+          right_text: ${{ (startsWith(job.status, 'success') && env.IMAGE_SIZE) || 'N/A' }}
+          color: ${{ (startsWith(job.status, 'success') && 'blue') || 'gray' }}
+          public_id: ${{ env.IMAGE_NAME }}_${{ env.IMAGE_TAG }}-size
+
+      - name: Create custom badge for build
+        id: badge_build
+        if: github.ref == 'refs/heads/main'
+        uses: djalal/job-status-badge@main
+        with:
+          cloudinary_url: ${{ secrets.CLOUDINARY_URL }}
+          left_text: ${{ env.IMAGE_NAME }}%3A${{ env.IMAGE_TAG }}
+          right_text: ${{ (startsWith(job.status, 'success') && 'passing') || 'failed' }}
+          color: ${{ (startsWith(job.status, 'success') && 'green') || 'red' }}
+          public_id: ${{ env.IMAGE_NAME }}_${{ env.IMAGE_TAG }}-status
+
+  purge_camo_badges:
+    needs: build_and_push
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Purge badges from camo
+        run: |
+          PurgeBadgeList() {
+              while read -t5 URL Badge; do
+                  URL="${URL%\"*}";
+                  Badge="'${Badge#*\"}'                                        "
+                  echo -n "Purging Badge ${Badge}: ";
+                  read -t60 result < <( curl --silent --request 'PURGE' -H 'Content-Type:application/json' --user-agent "$UserAgentString" --output '/dev/stdout' $URL | jq .status )
+                  result="${result//\"/}"
+                  echo "${result:-???}"
+              done
+          }
+          export -f PurgeBadgeList;
+          PurgeBadgeList < <(cat ./.github/workflows/PURGE.md | grep -o 'https://camo.githubusercontent.com.*alt="[^"]*')
