pin angular version

--- a/angular/12/Dockerfile
+++ b/angular/12/Dockerfile
@@ -4,6 +4,6 @@ LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
       stage="alpha"
 
-RUN npm install -g @angular/cli
+RUN npm install -g @angular/cli@12.2.13
 
 WORKDIR /var/www/html
