--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -51,10 +51,11 @@ jobs:
           TMP_IMAGE_ARRAY=($(echo $folder | tr "/" "\n"))
 
           IMAGE_NAME=${TMP_IMAGE_ARRAY[1]}
+          IMAGE_NAME_ESCAPED=${IMAGE_NAME/-/--}
           TAG=${TMP_IMAGE_ARRAY[2]}
 
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-          echo "IMAGE_NAME_ESCAPED=${IMAGE_NAME/-/--}" >> $GITHUB_ENV
+          echo "IMAGE_NAME_ESCAPED=$IMAGE_NAME_ESCAPED" >> $GITHUB_ENV
           echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
           echo "DOCKERFILE_FOLDER=$folder" >> $GITHUB_ENV
 
