--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -72,11 +72,12 @@ jobs:
           export REGISTRY_TARGET=${{ secrets.AKT_ENG_REGISTRY_DOMAIN }} && ./build.sh --lint=true --test=true --image=$IMAGE_NAME --tag=$TAG
           IMAGE_ID=registry.artifakt.io/$IMAGE_NAME
 
-          IMAGE_SIZE=`docker images $IMAGE_ID:$TAG --format "{{.Size}}"`
+          IMAGE_SIZE=`docker images $IMAGE_ID:$TAG --format '{{.Size}}'`
           echo "DEBUG ==> IMAGE_SIZE=$IMAGE_SIZE"
           echo "DEBUG ==> IMAGE_ID=$IMAGE_ID"
           echo "DEBUG ==> TAG=$TAG"
           echo "DEBUG ==> docker images" && docker images
+          echo "DEBUG ==> docker images $IMAGE_ID:$TAG" && docker images $IMAGE_ID:$TAG 
           
           echo "IMAGE_SIZE=$IMAGE_SIZE" >> $GITHUB_ENV          
 
