remove hardcoded registry url

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -70,7 +70,7 @@ jobs:
           TAG=${{ env.IMAGE_TAG }}
 
           export REGISTRY_TARGET=${{ secrets.AKT_ENG_REGISTRY_DOMAIN }} && ./build.sh --lint=true --test=true --image=$IMAGE_NAME --tag=$TAG
-          IMAGE_ID=registry.artifakt.io/$IMAGE_NAME
+          IMAGE_ID=$REGISTRY_TARGET/$IMAGE_NAME
 
           IMAGE_SIZE=`docker images $IMAGE_ID:$TAG --format '{{.Size}}'`
           echo "DEBUG ==> IMAGE_SIZE=$IMAGE_SIZE"
