(ci skip) review nuxt

--- a/nuxtjs/2.15/Dockerfile
+++ b/nuxtjs/2.15/Dockerfile
@@ -4,6 +4,8 @@ LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
       stage="alpha"
 
+ARG NUXT_VERSION=2.5.17
+
 WORKDIR /var/www/html
 COPY package.json .
 RUN npm install --force && chown -R www-data:www-data .
