rm useless quotes

--- a/akeneo/4-apache/Dockerfile
+++ b/akeneo/4-apache/Dockerfile
@@ -116,7 +116,7 @@ WORKDIR /var/www/html
 RUN curl -sSLO https://github.com/akeneo/pim-community-standard/archive/$AKENEO_VERSION.tar.gz && \
     tar -xzf $AKENEO_VERSION.tar.gz -C . && \
     rm $AKENEO_VERSION.tar.gz && \
-    mv pim-community-standard-"${AKENEO_VERSION:1}" pim-community-standard && \
+    mv pim-community-standard-${AKENEO_VERSION:1} pim-community-standard && \
     chown -R www-data:www-data .
 
 WORKDIR /var/www/html/pim-community-standard
